<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/resolutionInfoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/resolution_info_title_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/resolutionInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/resolution_info_text" />

                <TextView
                    android:id="@+id/resolutionPresetLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/resolution_preset_label" />

                <Spinner
                    android:id="@+id/resolutionPresetSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/resolution_preset_label" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/resolutionWidthEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/resolutionXText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="x" />

                    <EditText
                        android:id="@+id/resolutionHeightEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/resolutionAutoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/resolution_auto_button" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scalingQualityInfoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/scaling_quality_info_title_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/scalingQualityInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/scaling_quality_info_text" />

                <Spinner
                    android:id="@+id/scalingQualitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/game_version_empty_text" />
            </LinearLayout>

            <!-- OGVM-CONTROLLER: enable + stick modes (full remap = desktop) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/controllerInfoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/controller_info_title_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/controllerInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/controller_info_text" />

                <TextView
                    android:id="@+id/controllerStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/controller_status_none"
                    android:textColor="@color/colorAccent" />

                <CheckBox
                    android:id="@+id/controllerEnableChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/controller_enable_label" />

                <TextView
                    android:id="@+id/controllerLayoutLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/controller_layout_label" />

                <Spinner
                    android:id="@+id/controllerLayoutSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/controller_layout_label" />

                <TextView
                    android:id="@+id/leftStickLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/controller_left_stick_label" />

                <Spinner
                    android:id="@+id/leftStickSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/controller_left_stick_label" />

                <TextView
                    android:id="@+id/rightStickLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/controller_right_stick_label" />

                <Spinner
                    android:id="@+id/rightStickSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/controller_right_stick_label" />

                <LinearLayout
                    android:id="@+id/touchpadSettingsGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/controller_touchpad_label" />

                    <Spinner
                        android:id="@+id/touchpadModeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/touchpadSensitivityLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp" />

                    <SeekBar
                        android:id="@+id/touchpadSensitivityBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="3800" />

                    <Spinner
                        android:id="@+id/touchpadOutputSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/controllerBindingsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/controller_bindings_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <LinearLayout
                    android:id="@+id/controllerBindingsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/debugModeInfoTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/debug_mode_info_title_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/debugModeInfoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/debug_mode_info_text" />

                    <CheckBox
                        android:id="@+id/debugModeChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/debug_mode_label" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
